src/objects/CRMC_PP__ActionGrid_Request__c.object
<CustomObject>
    <fields>
        <fullName>CRMC_PP__FieldName__c</fullName>
        <description>API name of the field being monitored.</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Message__c</fullName>
        <description>Full message sent to chatter.</description>
        <label>Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__ObjectName__c</fullName>
        <description>API name of the object being monitored.</description>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__RecordId__c</fullName>
        <description>Record Id text.</description>
        <label>RecordId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ActionGrid Request</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ActionGrid_Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ActionGrid Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>